js: select list ui

--- a/index.html
+++ b/index.html
@@ -283,30 +283,37 @@
                   <i class="app__heading-icon bi bi-list-ul"></i>Danh mục
                 </div>
                 <ul class="app__category-list">
-                  <li class="app__category-title">
-                    <div class="app__title-icon"></div>
+                  <li class="app__category-item app__category-item--active">
+                    <div class="app__item-icon"></div>
                     Sản phẩm
                   </li>
                   <li class="app__category-item">
-                    <a href="" class="app__item-link">Quần, áo</a>
+                    <div class="app__item-icon"></div>
+                    <a href="#" class="app__item-link">Quần, áo</a>
                   </li>
                   <li class="app__category-item">
-                    <a href="" class="app__item-link">Giày, dép</a>
+                    <div class="app__item-icon"></div>
+                    <a href="#" class="app__item-link">Giày, dép</a>
                   </li>
                   <li class="app__category-item">
-                    <a href="" class="app__item-link">Túi sách</a>
+                    <div class="app__item-icon"></div>
+                    <a href="#" class="app__item-link">Túi sách</a>
                   </li>
                   <li class="app__category-item">
-                    <a href="" class="app__item-link">Set</a>
+                    <div class="app__item-icon"></div>
+                    <a href="#" class="app__item-link">Set</a>
                   </li>
                   <li class="app__category-item">
-                    <a href="" class="app__item-link">Giảm giá</a>
+                    <div class="app__item-icon"></div>
+                    <a href="#" class="app__item-link">Giảm giá</a>
                   </li>
                   <li class="app__category-item">
-                    <a href="" class="app__item-link">Hàng mới về</a>
+                    <div class="app__item-icon"></div>
+                    <a href="#" class="app__item-link">Hàng mới về</a>
                   </li>
                   <li class="app__category-item">
-                    <a href="" class="app__item-link">Phụ kiện</a>
+                    <div class="app__item-icon"></div>
+                    <a href="#" class="app__item-link">Phụ kiện</a>
                   </li>
                 </ul>
               </div>
@@ -315,7 +322,7 @@
               <div class="app__filter">
                 <div class="app__filter-label">Sắp xếp theo</div>
                 <div class="app__filter-list">
-                  <button class="btn app__filter-item btn--primary">
+                  <button class="btn app__filter-item btn--active">
                     Phổ biến
                   </button>
                   <button class="btn app__filter-item">Mới nhất</button>
@@ -3981,5 +3988,7 @@
         </div>
       </footer>
     </div>
+    <script src="./assets/js/helper.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
