--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <ul class="app__category-list">
                   <li class="app__category-item app__category-item--active">
                     <div class="app__item-icon"></div>
-                    Sản phẩm
+                    <a href="#" class="app__item-link">Sản phẩm</a>
                   </li>
                   <li class="app__category-item">
                     <div class="app__item-icon"></div>
