category list minor changes

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                 >
               </li>
               <!-- Logged:  header__nav-item-right--user -->
-              <div class="header__nav-item-right header__nav-item-right--reg header__nav-item-right--user ">
+              <div
+                class="header__nav-item-right header__nav-item-right--reg header__nav-item-right--user"
+              >
                 <div class="header__nav-reg">
                   <a href="" class="header__nav-login">Đăng ký</a>
                   <a href="" class="header__nav-register">Đăng nhập</a>
@@ -227,7 +229,8 @@
                           alt="item-ao"
                         />
                         <div class="header__cart-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <div class="header__cart-price">150.000</div>
                       </a>
@@ -240,7 +243,8 @@
                           alt="item-ao"
                         />
                         <div class="header__cart-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <div class="header__cart-price">150.000</div>
                       </a>
@@ -253,7 +257,8 @@
                           alt="item-ao"
                         />
                         <div class="header__cart-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <div class="header__cart-price">150.000</div>
                       </a>
@@ -288,31 +293,24 @@
                     <a href="#" class="app__item-link">Sản phẩm</a>
                   </li>
                   <li class="app__category-item">
-                    <div class="app__item-icon"></div>
                     <a href="#" class="app__item-link">Quần, áo</a>
                   </li>
                   <li class="app__category-item">
-                    <div class="app__item-icon"></div>
                     <a href="#" class="app__item-link">Giày, dép</a>
                   </li>
                   <li class="app__category-item">
-                    <div class="app__item-icon"></div>
                     <a href="#" class="app__item-link">Túi sách</a>
                   </li>
                   <li class="app__category-item">
-                    <div class="app__item-icon"></div>
                     <a href="#" class="app__item-link">Set</a>
                   </li>
                   <li class="app__category-item">
-                    <div class="app__item-icon"></div>
                     <a href="#" class="app__item-link">Giảm giá</a>
                   </li>
                   <li class="app__category-item">
-                    <div class="app__item-icon"></div>
                     <a href="#" class="app__item-link">Hàng mới về</a>
                   </li>
                   <li class="app__category-item">
-                    <div class="app__item-icon"></div>
                     <a href="#" class="app__item-link">Phụ kiện</a>
                   </li>
                 </ul>
@@ -369,7 +367,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -505,7 +504,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -641,7 +641,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -777,7 +778,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -913,7 +915,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -1049,7 +1052,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -1185,7 +1189,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -1321,7 +1326,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -1457,7 +1463,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -1593,7 +1600,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -1729,7 +1737,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -1865,7 +1874,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2001,7 +2011,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2137,7 +2148,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2273,7 +2285,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2409,7 +2422,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2545,7 +2559,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2681,7 +2696,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2817,7 +2833,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -2953,7 +2970,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -3089,7 +3107,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -3225,7 +3244,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -3361,7 +3381,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -3497,7 +3518,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
@@ -3633,7 +3655,8 @@
 
                       <div class="app__product-info">
                         <div class="app__product-name">
-                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang Wind
+                          Áo gile unisex form rộng Gile Basic Tea nam nữ ulzzang
+                          Wind
                         </div>
                         <!-- app__product-discount--disabled -->
                         <div class="app__product-discount">Mua 2 giảm 5%</div>
