filter fix, add filter price

--- a/index.html
+++ b/index.html
@@ -330,8 +330,9 @@
                     <span class="app__input-lable">Giá</span>
                     <i class="app__input-icon bi bi-chevron-down"></i>
                     <ul class="app__input-list">
-                      <li class="app__input-item">Giá: Thấp đến Cao</li>
-                      <li class="app__input-item">Giá: Cao đến Thấp</li>
+                      <!-- icon: <i class="app__input-item-icon bi bi-check"></i> -->
+                      <li class="app__input-item app__price-asc">Giá: Thấp đến Cao</li>
+                      <li class="app__input-item app__price-desc">Giá: Cao đến Thấp</li>
                     </ul>
                   </div>
                 </div>
