Fix filter price

--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
                     <i class="app__input-icon bi bi-chevron-down"></i>
                     <ul class="app__input-list">
                       <!-- icon: <i class="app__input-item-icon bi bi-check"></i> -->
+                      <!-- active: app__input-item--active  -->
+                      <li class="app__input-item app__price-default app__input-item--active">Giá<i class="app__input-item-icon bi bi-check"></i></li>
                       <li class="app__input-item app__price-asc">Giá: Thấp đến Cao</li>
                       <li class="app__input-item app__price-desc">Giá: Cao đến Thấp</li>
                     </ul>
