Category filter(sp, shirt, shoe)

--- a/index.html
+++ b/index.html
@@ -288,30 +288,30 @@
                   <i class="app__heading-icon bi bi-list-ul"></i>Danh mục
                 </div>
                 <ul class="app__category-list">
-                  <li class="app__category-item app__category-item--active">
+                  <li class="app__category-item app__category-default app__category-item--active">
                     <div class="app__item-icon"></div>
-                    <a href="#" class="app__item-link">Sản phẩm</a>
+                    <div class="app__item-link">Sản phẩm</div>
+                  </li>
+                  <li class="app__category-item app__category-shirt">
+                    <div class="app__item-link">Quần, áo</div>
+                  </li>
+                  <li class="app__category-item app__category-shoe">
+                    <div class="app__item-link">Giày, dép</div>
                   </li>
                   <li class="app__category-item">
-                    <a href="#" class="app__item-link">Quần, áo</a>
+                    <div class="app__item-link">Túi sách</div>
                   </li>
                   <li class="app__category-item">
-                    <a href="#" class="app__item-link">Giày, dép</a>
+                    <div class="app__item-link">Set</div>
                   </li>
                   <li class="app__category-item">
-                    <a href="#" class="app__item-link">Túi sách</a>
+                    <div class="app__item-link">Giảm giá</div>
                   </li>
                   <li class="app__category-item">
-                    <a href="#" class="app__item-link">Set</a>
+                    <div class="app__item-link">Hàng mới về</div>
                   </li>
                   <li class="app__category-item">
-                    <a href="#" class="app__item-link">Giảm giá</a>
-                  </li>
-                  <li class="app__category-item">
-                    <a href="#" class="app__item-link">Hàng mới về</a>
-                  </li>
-                  <li class="app__category-item">
-                    <a href="#" class="app__item-link">Phụ kiện</a>
+                    <div class="app__item-link">Phụ kiện</div>
                   </li>
                 </ul>
               </div>
