--- a/index.html
+++ b/index.html
@@ -298,19 +298,19 @@
                   <li class="app__category-item app__category-shoe">
                     <div class="app__item-link">Giày, dép</div>
                   </li>
-                  <li class="app__category-item">
-                    <div class="app__item-link">Túi sách</div>
+                  <li class="app__category-item app__category-bag">
+                    <div class="app__item-link">Túi xách</div>
                   </li>
-                  <li class="app__category-item">
+                  <li class="app__category-item app__category-set">
                     <div class="app__item-link">Set</div>
                   </li>
-                  <li class="app__category-item">
+                  <li class="app__category-item app__category-discount">
                     <div class="app__item-link">Giảm giá</div>
                   </li>
-                  <li class="app__category-item">
+                  <li class="app__category-item app__category-new">
                     <div class="app__item-link">Hàng mới về</div>
                   </li>
-                  <li class="app__category-item">
+                  <li class="app__category-item app__category-accessories">
                     <div class="app__item-link">Phụ kiện</div>
                   </li>
                 </ul>
