--- a/index.html
+++ b/index.html
@@ -373,38 +373,22 @@
               </div>
               <div class="grid__row grid__row-product"></div>
               <ul class="pagination pagination--mtb3">
-                <li class="pagination-item">
-                  <a href="" class="pagination-item__link">
+                <!-- <li class="pagination-item pagination-item__left">
+                  <div href="" class="pagination-item__link">
                     <i class="pagination-item__icon bi bi-chevron-left"></i>
-                  </a>
+                  </div>
                 </li>
-                <!-- selected: pagination-item--active -->
                 <li class="pagination-item pagination-item--active">
-                  <a href="" class="pagination-item__link">1</a>
+                  <div class="pagination-item__link">1</div>
                 </li>
                 <li class="pagination-item">
-                  <a href="" class="pagination-item__link">2</a>
+                  <div class="pagination-item__link">2</div>
                 </li>
-                <li class="pagination-item">
-                  <a href="" class="pagination-item__link">3</a>
-                </li>
-                <li class="pagination-item">
-                  <a href="" class="pagination-item__link">4</a>
-                </li>
-                <li class="pagination-item">
-                  <a href="" class="pagination-item__link">5</a>
-                </li>
-                <li class="pagination-item">
-                  <a href="" class="pagination-item__link">...</a>
-                </li>
-                <li class="pagination-item">
-                  <a href="" class="pagination-item__link">12</a>
-                </li>
-                <li class="pagination-item">
-                  <a href="" class="pagination-item__link">
+                <li class="pagination-item pagination-item__right">
+                  <div class="pagination-item__link">
                     <i class="pagination-item__icon bi bi-chevron-right"></i
-                  ></a>
-                </li>
+                  ></div>
+                </li> -->
               </ul>
             </div>
           </div>
