Paging ok, optimize code and file

--- a/index.html
+++ b/index.html
@@ -356,10 +356,7 @@
                 </div>
                 <div class="app__filter-page">
                   <div class="app__page-number">
-                    <!-- <span class="app__page-index">1</span>/<span
-                    class="app__page-page-total"
-                    >6</span
-                  > -->
+                    <!-- render -->
                     <!--  app__pre-page--disabled -->
                   </div>
                   <div class="app__filter-page-item app__pre-page app__pre-page--disabled">
@@ -373,22 +370,7 @@
               </div>
               <div class="grid__row grid__row-product"></div>
               <ul class="pagination pagination--mtb3">
-                <!-- <li class="pagination-item pagination-item__left">
-                  <div href="" class="pagination-item__link">
-                    <i class="pagination-item__icon bi bi-chevron-left"></i>
-                  </div>
-                </li>
-                <li class="pagination-item pagination-item--active">
-                  <div class="pagination-item__link">1</div>
-                </li>
-                <li class="pagination-item">
-                  <div class="pagination-item__link">2</div>
-                </li>
-                <li class="pagination-item pagination-item__right">
-                  <div class="pagination-item__link">
-                    <i class="pagination-item__icon bi bi-chevron-right"></i
-                  ></div>
-                </li> -->
+                <!-- render -->
               </ul>
             </div>
           </div>
@@ -592,7 +574,7 @@
     </div>
     <script src="./assets/js/helper.js"></script>
     <script type="module" src="./assets/js/data.js"></script>
-    <script type="module" src="./assets/js/productFilter.js"></script>
+    <script type="module" src="./assets/js/productFilterAndEvent.js"></script>
     <script type="module" src="./assets/js/pagination.js"></script>
   </body>
 </html>
