footer payment css

--- a/index.html
+++ b/index.html
@@ -359,7 +359,9 @@
                     <!-- render -->
                     <!--  app__pre-page--disabled -->
                   </div>
-                  <div class="app__filter-page-item app__pre-page app__pre-page--disabled">
+                  <div
+                    class="app__filter-page-item app__pre-page app__pre-page--disabled"
+                  >
                     <i class="app__pre-icon bi bi-chevron-left"></i>
                   </div>
                   <div class="app__filter-page-item app__next-page">
@@ -460,58 +462,64 @@
               <h3 class="footer__heading">THANH TOÁN</h3>
               <ul class="footer__list-payment">
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-visa"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-master"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div
+                    class="footer__payment-backround footer__payment-jcb"
+                  ></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-amex"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-cod"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <a href="" class="footer__item-link"></a>
+                   <div class="footer__payment-backround footer__payment-installment"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <a href="" class="footer__item-link"></a>
+                   <div class="footer__payment-backround footer__payment-airpay"></div>
                 </li>
               </ul>
               <h3 class="footer__heading">ĐƠN VỊ VẬN CHUYỂN</h3>
               <ul class="footer__list-shipping">
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-express"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-ghtk"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-ghn"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-viettel"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-vnpost"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-jnt"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-grab"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-now"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-ninja"></div>
                 </li>
                 <li class="footer__payment-item">
-                  <div class="footer__payment-backround"></div>
+                  <div class="footer__payment-backround footer__payment-best"></div>
                 </li>
               </ul>
             </div>
