Correcting func in each module

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
     </div>
     <script src="./assets/js/helper.js"></script>
     <script type="module" src="./assets/js/data.js"></script>
-    <script type="module" src="./assets/js/productFilterAndEvent.js"></script>
+    <script type="module" src="./assets/js/product.js"></script>
     <script type="module" src="./assets/js/pagination.js"></script>
   </body>
 </html>
